[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruleforge"
version = "0.1.0"
description = "Advanced offline Hashcat rule learning and optimization framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["hashcat", "password", "rules", "cracking", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "tqdm>=4.66",
    "pyyaml>=6",
    "tomli>=2.0; python_version < '3.11'",
    "scipy>=1.12",
    "numpy>=1.26",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
pdf = ["reportlab>=4.1"]
nlp = ["nltk>=3.8"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "black>=24",
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6",
]

[project.scripts]
ruleforge = "ruleforge.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ruleforge*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ruleforge --cov-report=term-missing"
